--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ include = [
     "/LICENSE-MIT",
     "/LICENSE-APACHE",
 ]
+edition= "2018"
 
 [badges]
 travis-ci = { repository = "eldruin/opt300x-rs", branch = "master" }
