--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opt300x"
-version = "0.1.1" # remember to update html_root_url
+version = "0.1.1"
 authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
 repository = "https://github.com/eldruin/opt300x-rs"
 license = "MIT OR Apache-2.0"
